<?xml version="1.0"?>

<package>
  <name>vr_ui</name>
  <version>0.0.0</version>
  <description>A virtual-reality-based user interface.</description>
  <maintainer email="andyz@utexas.edu">Andy Zelenak</maintainer>
  <author>Veiko Vunder, Andy Zelenak</author>
  <license>see license.txt</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_srvs</run_depend>
</package>


